--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -4,7 +4,7 @@ metadata:
   name: null-package
   description: Null is a package for handling Null and Zero values in GoLang
   annotations:
-    github.com/project-slug: Uplight-Inc/null
+    github.com/project-slug: auto-grid/null
 spec:
   type: library
   lifecycle: production
